# battery-indicator-lvgl-editor

./: README.md  battery_indicator_gen.h  file_list_gen.cmake  globals.xml  idf_component.yml
.github/workflows/: publish-previews.yml
battery_indicator/: CMakeLists.txt  battery_indicator.c  battery_indicator_gen.c  file_list_gen.cmake  project.xml
battery_indicator/components/battery_indicator/: battery_gen.c  battery_gen.h
battery_indicator/components/battery_indicator_2/: battery_indicator_2_gen.c  battery_indicator_2_gen.h
battery_indicator/components/battery_indicator_v2/: battery_indicator_v2_gen.c
battery_indicator/components/button/: button_gen.c  button_gen.h
battery_indicator/components/charge_slider/: charge_slider_gen.c
battery_indicator/components/clock/: clock_gen.c
battery_indicator/components/settings_item/: settings_item_gen.c
battery_indicator/components/settings_menu_line/: settings_menu_line_gen.c
battery_indicator/components/settings_panel/: settings_panel_gen.c
battery_indicator/components/toggle_switch/: toggle_switch_gen.c
battery_indicator/components/top_bar/: top_bar.xml  top_bar_gen.c
battery_indicator/preview-bin/: lved-runtime.js
battery_indicator/preview-build/project/: Makefile
battery_indicator/screens/: smartwatch_gen.h
battery_indicator/screens/smartwatch/: smartwatch_gen.c
battery_indicator/screens/smartwatch_v2/: smartwatch_v2_gen.c
battery_indicator/widgets/wd_battery/: wd_battery_gen.c  wd_battery_gen.h  wd_battery_private_gen.h
battery_indicator/widgets/wd_battery_v2/: wd_battery_v2_gen.c  wd_battery_v2_xml_parser.c
components/battery_indicator/: battery.xml  battery_gen.c
components/button/: button_gen.c
components/charge_slider/: charge_slider.xml  (+1 more)
screens/: smartwatch_gen.c
(+5 files in other folders)
